--- a/module-5/index.html
+++ b/module-5/index.html
@@ -23,7 +23,7 @@
             <a href="index.html"><h1>David Chu's China Bistro hello ji</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
-              <span>Kosher Certified</span>
+              <span>Kosher Certified hello ji</span>
             </p>
           </div>
 
