checking from other acount cos laptop go

--- a/module-5/index.html
+++ b/module-5/index.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>David Chu's China Bistr   o hello j gfccf     ccfcfcfci</h1></a>
+            <a href="index.html"><h1>David        's China Bistr   o hello j gfccf     ccfcfcfci</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Kosher certification">
               <span>Kosher Certified hello ji</span>
